--- a/index.html
+++ b/index.html
@@ -74,21 +74,149 @@ button{
 <h1>Happy Birthday Akansha Gaur ❤️</h1>
 
 <p>
-5 years ago, destiny gifted me the most beautiful soul.
-You are my peace in chaos, my strength in weakness,
-my smile in sadness.
-</p>
+🌸 Happy Birthday, Akansha Gaur 🌸
+The most beautiful chapter of my life
 
-<p>
-If love had a face, it would look like you.
-If happiness had a voice, it would sound like your laughter.
-If forever had a meaning, it would be us.
-</p>
+My Dearest Akansha,
 
-<p>
-I promise to hold your hand in every storm,
-protect your smile,
-and love you more with every sunrise.
+Aaj ka din sirf calendar ka ek date nahi hai.
+Yeh woh din hai jab kismat ne decide kiya tha
+ki meri life me roshni bhejni hai…
+aur us roshni ka naam hai Akansha Gaur.
+
+Kabhi kabhi main sochta hoon —
+agar tum meri life me nahi aati,
+toh shayad main muskura toh leta…
+par dil se khush hona nahi jaanta.
+
+Tum meri zindagi ka woh hissa ho
+jise main lafzon me poora kabhi samjha hi nahi paunga.
+Tum hawa ki tarah ho —
+dikhti nahi,
+par har waqt mehsoos hoti ho.
+
+5 saal…
+5 saal pehle shayad hum dono ko nahi pata tha
+ki ek chhoti si baat, ek simple si hello,
+ek din itni gehri kahani ban jayegi.
+
+In 5 saalon me humne sirf waqt nahi bitaya,
+humne ek dusre ko samjha,
+saha,
+thoda ladhe,
+bahut hase,
+aur sabse important —
+kabhi chhoda nahi.
+
+Akansha,
+tum meri aadat nahi…
+tum meri zarurat ho.
+
+Jab din bura hota hai,
+tumhari awaaz meri therapy ban jaati hai.
+
+Jab main overthink karta hoon,
+tumhara “it’s okay” mere dimaag ka noise band kar deta hai.
+
+Tumhari hasi…
+jaise baarish ke baad ki mitti ki khushboo.
+Tumhari aankhen…
+jaise shaam ka aasmaan,
+jisme main khud ko kho dena chahta hoon.
+
+Main maanta hoon,
+main perfect nahi hoon.
+Kabhi ziddi, kabhi immature,
+kabhi unnecessary attitude.
+
+Lekin ek baat hamesha sach rahegi —
+mera pyaar tumhare liye kabhi kam nahi hoga.
+
+Agar zindagi ek safar hai,
+toh main har mod pe tumhara haath pakad kar chalna chahta hoon.
+
+Main future imagine karta hoon —
+tum balcony me khadi ho,
+haath me coffee,
+baal halki hawa me udte hue…
+aur main tumhe bas dekh raha hoon,
+soch raha hoon —
+“Yeh meri hai.”
+
+Main imagine karta hoon
+chhoti chhoti fights jo 10 minute baad hug me badal jaati hain.
+Late night talks jo 3 baje tak khatam nahi hoti.
+Random road trips jahan destination important nahi,
+saath hona important hota hai.
+
+Akansha,
+tum meri strength ho.
+Main gym me weight uthata hoon
+par asli strength mujhe tumse milti hai.
+
+Jab main life me struggle karta hoon,
+jab future ka pressure feel hota hai,
+jab khud par doubt hota hai —
+tum meri motivation ban jaati ho.
+
+Tumne mujhe better insaan banaya hai.
+Tumne mujhe sikhaya ki pyaar possess karna nahi,
+protect karna hota hai.
+
+Aaj tumhara birthday hai.
+Aaj main sirf ek wish nahi karta.
+Main dua karta hoon.
+
+Main dua karta hoon ki:
+Tum hamesha khush raho.
+Tumhare sapne sach ho.
+Tum kabhi khud ko kam na samjho.
+Tumhe duniya hamesha respect kare.
+
+Aur agar kabhi duniya tumhe samajh na paaye,
+toh yaad rakhna —
+tumhara ek insan hai
+jo tumhe har haal me samjhega.
+
+Akansha,
+agar kabhi andhera ho,
+toh main tumhara diya banunga.
+
+Agar kabhi tum girne lago,
+toh main tumhara sahara banunga.
+
+Agar kabhi tum ro do,
+toh main tumhari wajah se nahi,
+tumhare saath ro dunga.
+
+Main promise karta hoon —
+main tumhe kabhi akela feel nahi hone dunga.
+Main tumhara biggest supporter rahunga.
+Main tumhari respect hamesha protect karunga.
+
+5 saal ho gaye…
+par mere liye tum aaj bhi waise hi special ho
+jaise pehle din thi.
+
+Shayad hum perfect couple nahi hain.
+Par hum real hain.
+Aur real pyaar hi sabse rare hota hai.
+
+Tum meri kahani ka sabse khoobsurat hissa ho.
+Aur main chahta hoon
+yeh kahani kabhi khatam na ho.
+
+Happy Birthday, Akansha Gaur. 🎂❤️
+
+Thank you for loving me.
+Thank you for trusting me.
+Thank you for choosing me again and again.
+
+5 years down…
+and I still fall for you every single day.
+
+Forever and Always,
+Sanjay ❤️
 </p>
 
 <button onclick="showLove()">Tap For A Surprise 💖</button>
@@ -119,4 +247,5 @@ for(let i=0;i<25;i++){
 
 </body>
 </html>
+
 
