--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Happy Birthday Akansha ❤️</title>
 
 <style>
-body {
+html, body {
     margin:0;
+    padding:0;
+    height:100%;
     font-family: 'Segoe UI', sans-serif;
+    overflow-x:hidden;
+}
+
+body {
     background: linear-gradient(-45deg,#ff6a88,#ff99ac,#ffc3a0,#ff758c);
     background-size:400% 400%;
     animation: gradient 12s ease infinite;
     color:white;
     text-align:center;
-    overflow:hidden;
 }
 
 @keyframes gradient {
@@ -23,47 +29,60 @@ body {
 }
 
 .container{
-    padding:50px 20px;
+    padding:60px 20px 100px 20px;
     max-width:900px;
     margin:auto;
+    position:relative;
+    z-index:2;
 }
 
 h1{
-    font-size:40px;
+    font-size:38px;
+    margin-bottom:30px;
 }
 
-p{
+.message{
     font-size:20px;
-    line-height:1.7;
+    line-height:1.9;
+    white-space:pre-line;
 }
 
 button{
-    margin-top:25px;
-    padding:12px 30px;
+    margin-top:40px;
+    padding:14px 35px;
     border:none;
     border-radius:30px;
     font-size:18px;
     background:white;
     color:#ff4d6d;
     cursor:pointer;
+    transition:0.3s;
+}
+
+button:hover{
+    transform:scale(1.07);
 }
 
 #secret{
     display:none;
-    margin-top:30px;
+    margin-top:40px;
     font-size:24px;
     font-weight:bold;
 }
 
+/* ❤️ floating hearts background */
 .heart{
-    position:absolute;
+    position:fixed;
+    bottom:-50px;
     color:white;
-    animation: float 6s linear infinite;
+    animation: floatUp linear infinite;
+    pointer-events:none;
+    z-index:1;
 }
 
-@keyframes float{
-    0%{transform:translateY(100vh) scale(0.5);}
-    100%{transform:translateY(-10vh) scale(1);}
+@keyframes floatUp{
+    from{transform:translateY(0) scale(0.6);}
+    to{transform:translateY(-110vh) scale(1.2);}
 }
 </style>
 </head>
@@ -71,7 +90,12 @@ button{
 <body>
 
 <div class="container">
+
 <h1>Happy Birthday Akansha Gaur ❤️</h1>
+
+<div class="message">
+🌸 Happy Birthday, Akansha 🌸
+
 
 <p>
 🌸 Happy Birthday, Akansha Gaur 🌸
@@ -219,11 +243,17 @@ Forever and Always,
 Sanjay ❤️
 </p>
 
+
+
+
+
+</div>
+
 <button onclick="showLove()">Tap For A Surprise 💖</button>
 
 <div id="secret">
-I Love You More Than Words Can Ever Say ❤️<br><br>
-Forever Yours,<br>
+I Love You More Than Words Can Ever Say ❤️  
+Forever Yours,  
 Sanjay
 </div>
 
@@ -234,18 +264,16 @@ function showLove(){
     document.getElementById("secret").style.display="block";
 }
 
-for(let i=0;i<25;i++){
+for(let i=0;i<35;i++){
     let heart=document.createElement("div");
     heart.className="heart";
     heart.style.left=Math.random()*100+"vw";
-    heart.style.fontSize=(Math.random()*25+20)+"px";
+    heart.style.fontSize=(Math.random()*25+18)+"px";
     heart.innerHTML="❤️";
-    heart.style.animationDuration=(Math.random()*5+5)+"s";
+    heart.style.animationDuration=(Math.random()*6+6)+"s";
     document.body.appendChild(heart);
 }
 </script>
 
 </body>
 </html>
-
-
