--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ My Dearest Akansha,
 Aaj ka din sirf calendar ka ek date nahi hai.
 Yeh woh din hai jab kismat ne decide kiya tha
 ki meri life me roshni bhejni hai…
-aur us roshni ka naam hai Akansha Gaur.
+aur us roshni ka naam hai Akansha.
 
 Kabhi kabhi main sochta hoon —
 agar tum meri life me nahi aati,
@@ -123,6 +123,10 @@ par har waqt mehsoos hoti ho.
 5 saal pehle shayad hum dono ko nahi pata tha
 ki ek chhoti si baat, ek simple si hello,
 ek din itni gehri kahani ban jayegi.
+    <div class="photo">
+  <img src="image1.jpg" alt="Our Memory">
+</div>
+
 
 In 5 saalon me humne sirf waqt nahi bitaya,
 humne ek dusre ko samjha,
@@ -132,7 +136,7 @@ bahut hase,
 aur sabse important —
 kabhi chhoda nahi.
 
-Akansha,
+Darling ,
 tum meri aadat nahi…
 tum meri zarurat ho.
 
@@ -158,6 +162,10 @@ mera pyaar tumhare liye kabhi kam nahi hoga.
 
 Agar zindagi ek safar hai,
 toh main har mod pe tumhara haath pakad kar chalna chahta hoon.
+    <div class="photo">
+  <img src="image2.jpg" alt="Our Memory">
+</div>
+
 
 Main future imagine karta hoon —
 tum balcony me khadi ho,
@@ -173,10 +181,14 @@ Late night talks jo 3 baje tak khatam nahi hoti.
 Random road trips jahan destination important nahi,
 saath hona important hota hai.
 
-Akansha,
+My Darling ,
 tum meri strength ho.
 Main gym me weight uthata hoon
 par asli strength mujhe tumse milti hai.
+    <div class="photo">
+  <img src="image3.jpg" alt="Our Memory">
+</div>
+
 
 Jab main life me struggle karta hoon,
 jab future ka pressure feel hota hai,
@@ -229,8 +241,12 @@ Aur real pyaar hi sabse rare hota hai.
 Tum meri kahani ka sabse khoobsurat hissa ho.
 Aur main chahta hoon
 yeh kahani kabhi khatam na ho.
+    <div class="photo">
+  <img src="image4.jpg" alt="Our Memory">
+</div>
 
-Happy Birthday, Akansha Gaur. 🎂❤️
+
+Happy Birthday, Akansha , My Baby , Darling , M y Sweetheart , Gulab Jamun , My Future Wifey  . 🎂❤️
 
 Thank you for loving me.
 Thank you for trusting me.
@@ -277,3 +293,4 @@ for(let i=0;i<35;i++){
 
 </body>
 </html>
+
