--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ body {
     font-size:26px;
     z-index:9999;
     cursor:pointer;
-    transition:1s ease;
     text-align:center;
     padding:20px;
+    transition:1s ease;
 }
 
 /* Main Content */
@@ -124,16 +124,21 @@ button:hover{
 
 <body>
 
+<!-- Overlay -->
 <div id="overlay">
 Tap To Open Your Surprise ❤️
 </div>
 
+<!-- Main Content -->
 <div class="container" id="mainContent">
 
 <h1>Happy Birthday Akansha Gaur ❤️</h1>
 
 <div class="message">
+🌸 Happy Birthday, Akansha 🌸<br><br>
+<p>
 🌸 Happy Birthday, Akansha Gaur 🌸
+
 The most beautiful chapter of my life
 
 My Dearest Akansha,
@@ -292,22 +297,21 @@ and I still fall for you every single day.
 
 Forever and Always,
 Sanjay ❤️
+</p>
+<div class="photo">
+<img src="image1.jpg" alt="Memory 1">
 </div>
 
 <div class="photo">
-  <img src="image1.jpg" alt="Memory">
+<img src="image2.jpg" alt="Memory 2">
 </div>
 
 <div class="photo">
-  <img src="image2.jpg" alt="Memory">
+<img src="image3.jpg" alt="Memory 3">
 </div>
 
 <div class="photo">
-  <img src="image3.jpg" alt="Memory">
-</div>
-
-<div class="photo">
-  <img src="image4.jpg" alt="Memory">
+<img src="image4.jpg" alt="Memory 4">
 </div>
 
 <button onclick="showLove()">Tap For A Surprise 💖</button>
@@ -317,8 +321,17 @@ I Love You More Than Words Can Ever Say ❤️
 </div>
 
 </div>
+</div>
 
 <script>
+/* Overlay Click - Show content */
+document.getElementById("overlay").addEventListener("click", function(){
+    document.getElementById("overlay").style.opacity = "0";
+    setTimeout(()=>{
+        document.getElementById("overlay").style.display = "none";
+        document.getElementById("mainContent").style.opacity = "1";
+    }, 500);
+});
 
 /* Surprise Button */
 function showLove(){
@@ -335,10 +348,7 @@ for(let i=0;i<35;i++){
     heart.style.animationDuration=(Math.random()*5+6)+"s";
     document.body.appendChild(heart);
 }
-
 </script>
 
 </body>
 </html>
-
-
